# smartship

./: .coveragerc  .travis.yml  ChangeLog.rst  LICENSE  MANIFEST.in  README.md  README.rst  dev-requirements.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
smartship/: __init__.py  _client.py  client.py  constants.py  exceptions.py  objects.py  schemas.py  settings.py  shipments.py
smartship/carriers/: posti.py
tests/: conftest.py  test_client.py  test_objects.py  test_shipments.py  test_smartship_client.py  test_version.py
tests/carriers/: test_posti.py
