[metadata]
name = smartship
version = 0.2.0.post+gitver
description = Posti SmartShip API
long_description = file: README.rst
author = Anders Innovations
author_email = support@anders.fi
maintainer = Anders Innovations
maintainer_email = support@anders.fi
url = https://github.com/andersinno/smartship
download_url = https://github.com/andersinno/smartship/releases
license= ?????
keywords = smartship, posti
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
install_requires =
    attrs>=16.2.0,<17
    jsonschema>=2.0,<3
    requests>=2.11.1,<3
    enum34>=1.1.6,<2

[options.packages.find]
exclude = tests, tests.*

[tool:pytest]

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[pep8]
max-line-length = 120
exclude=.tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[bdist_wheel]
universal = 1

[isort]
multi_line_output = 4
skip=.tox,dist,venv
not_skip = __init__.py
known_third_party = six
