[metadata]
name = smartship
version = 2.0.0
description = Posti SmartShip API
long_description = file: README.rst
author = Anders Innovations
author_email = support@anders.fi
maintainer = Anders Innovations
maintainer_email = support@anders.fi
url = https://github.com/andersinno/smartship
download_url = https://github.com/andersinno/smartship/releases
license = MIT
license_file = LICENSE
keywords = smartship, posti
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
install_requires =
    attrs>=17.3.0,<18
    jsonschema>=2.0,<3
    requests>=2.11.1,<3
    enum34>=1.1.6,<2
    simplejson>=3.10.0,<4

[options.packages.find]
exclude = tests, tests.*

[tool:pytest]

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[pep8]
max-line-length = 120
exclude=.tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[bdist_wheel]
universal = 1

[isort]
multi_line_output = 4
skip=.tox,dist,venv
not_skip = __init__.py
known_third_party = six
